experiments/policy-baseline/privileged/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-normal
  namespace: default
spec:
  containers:
    - name: app
      image: registry.example.com/demo:1
      securityContext:
        privileged: false
---
apiVersion: v1
kind: Pod
metadata:
  name: privileged-violation
  namespace: default
spec:
  containers:
    - name: app
      image: registry.example.com/demo:1
      securityContext:
        privileged: true
---
apiVersion: v1
kind: Pod
metadata:
  name: privileged-missing
  namespace: default
spec:
  containers:
    - name: app
      image: registry.example.com/demo:1
---
apiVersion: v1
kind: Pod
metadata:
  name: privileged-mixed
  namespace: default
spec:
  containers:
    - name: app
      image: registry.example.com/demo:1
      securityContext:
        privileged: false
    - name: sidecar
      image: registry.example.com/sidecar:1
      securityContext:
        privileged: true
